# exploration_jupytercards

./: .gitignore  .gitmodules  AstToHTML.js  LICENSE  MANIFEST.IN  README.md  admonitions_extracted.json  def_converted.json  example.ipynb  extract.py  extract_working.py  index.js  index.py  index2.py  indextest.js  main.js  main.py  package-lock.json  pyproject.toml  toDict.py
.ipynb_checkpoints/: MANIFEST-checkpoint.IN  example-checkpoint.ipynb  extract_working-checkpoint.py  indextest-checkpoint.js  main-checkpoint.py
JSON/: affectation.json  bloc_d_instructions.json  boucle_for.json  chaîne_de_charactères.json  expression_booléenne.json  instruction_conditionnelle_filée_si_alors_sinon_si_alors_sinon_.json  opération.json
example/: extract.py  index.js  index.py  main.js  package.json  toDict.py
example/.ipynb_checkpoints/: README-checkpoint.txt  def_converted-checkpoint.json  def_converted_jupC-checkpoint.json  extract-checkpoint.py  index-checkpoint.js  main-checkpoint.js  package-checkpoint.json  package-lock-checkpoint.json  toDict-checkpoint.py
example/HTML/: Définition 9.html  affectation.html  bloc_d_instructions.html  boucle_for.html  cellule.html  definition_1.json.html  definition_11.json.html  definition_12.json.html  definition_17.json.html  definition_18.json.html  definition_2.json.html  definition_8.json.html  definition_9.json.html  définition.html  réel.html  (+12 more)
exploration_jupytercards/: AstToHTML.js  MystToAST.js  extract.py  file.py  preprocess.py  toDict.py  tools.py
exploration_jupytercards.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+91 files in other folders)
