[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta" 

[project]
name = "exploration_jupytercards"
version = "0.1.0"
description = "Exploration et extraction de données pour JupyterCards"
authors = [
    { name = "Wn Ismael", email = "isma91sn@gmail.com" }
]
readme = "README.txt"
requires-python = ">=3.7"
dependencies = []

[tool.setuptools]
packages = ["exploration_jupytercards"]
include-package-data = true

[tool.setuptools.package-data]
exploration_jupytercards = ["*.js"]
